--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "plop": "^3.1.1",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
