--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.14",
     "plop": "^3.1.1",
     "postcss": "^8.4.24",
+    "react-icons": "^4.9.0",
     "tailwindcss": "^3.3.2"
   }
 }
